# assessment

./: .gitignore  .vercelignore  DEPLOYMENT.md  DOCUMENTATION.md  README.md  build.sh  vercel.json
backend/: main.py  pyproject.toml  requirements.txt  vercel.json
backend/data/: properties.json  reviews.json
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vercel.json
frontend/src/: App.tsx  global-store.ts  index.css  main.tsx
frontend/src/components/: dropdown.tsx  homepage-search-bar.tsx  location-card.tsx  popup.tsx  property-card.tsx  property-search-bar.tsx  search-bar.tsx
frontend/src/dashboardpage/: dashboard-nav-bar.tsx  dashboard-search-bar.tsx  dashboard.tsx  detail-section.tsx  item-card.tsx  review-details.tsx  spider-plot.tsx  summary-section.tsx
frontend/src/homepage/: homepage-search-bar.tsx  location-card.tsx  location-gallery.tsx  navbar.tsx  search.tsx
frontend/src/propertydetails/: gallery.tsx  propertydetailpage.tsx  review-slideshow.tsx  star.tsx
frontend/src/propertypage/: property-card.tsx  property-search-bar.tsx  propertypage.tsx
