[project]
name = "flex-living-backend"
version = "0.1.0"
description = "Backend for Flex Living app"
authors = [
    {name = "sai-phyo-hein",email = "phyohein.1196@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
